# Cpp

./: README.md
FINAL_PROJECT/: CMakeLists.txt  README.md  Test.cpp  main.cpp
FINAL_PROJECT/Libs/: Autosave.cpp  Autosave.h  Licence_checker.cpp  Licence_checker.h
FINAL_PROJECT/SRC/: License.txt
FINAL_PROJECT/SRC/Shaders/: crt.frag
FINAL_PROJECT/Saves/: save.txt
HT_Cpp/Lesson1/: header_file.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp
HT_Cpp/Lesson10/: task1.c
HT_Cpp/Lesson11/: README.md  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
HT_Cpp/Lesson12/: README.md  task1.c  task2.c  task3.c
HT_Cpp/Lesson13/: task1.c  task2.c
HT_Cpp/Lesson14/: task1.cpp
HT_Cpp/Lesson15/: task1.cpp  task2.cpp
HT_Cpp/Lesson16/: input.prog  input2.prog  output.prog  task1.cpp  task2.cpp  task3.cpp
HT_Cpp/Lesson17/: data.txt  task1.cpp
HT_Cpp/Lesson18/: task1.cpp
HT_Cpp/Lesson2/: task1.cpp  task2.cpp
HT_Cpp/Lesson21/: task1.cpp
HT_Cpp/Lesson22/: database.txt  task1.cpp
HT_Cpp/Lesson23/: task1.cpp
HT_Cpp/Lesson24/: task1.cpp
HT_Cpp/Lesson25/: task1  task1.cpp  task2  (+1 more)
Lesson1/: task2.cpp  task3.cpp  task4.c++
Lesson2/: task4.cpp
Lesson3/: lib.h  task1.cpp
Lesson6/: task2.cpp  task5.cpp  task7.cpp
Lesson7/: task1.cpp  task5.cpp  task6.cpp
Lesson8/: task3.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
Lesson9/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
NN/: neuro1.cpp  neuro2.cpp
TEst_codes/: BMP_generator.cpp  GIF_generator.cpp  get_ascii.cpp
olymp/: BFS  BFS.cpp  graph.cpp  task1.cpp  task1060  task1060.cpp  task981.cpp
(+255 files in other folders)
